# kata-containers

src/agent/: Cargo.toml  README.md
src/agent/src/: aagent.rs  config.rs  image_rpc.rs  main.rs  rpc.rs  sandbox.rs  secrets.rs
src/agent/src/rpc/: rpctls.rs
src/libs/protocols/: Cargo.toml  build.rs
src/libs/protocols/secprotos/: health.proto  image.proto  oci.proto  secagent.proto
src/libs/protocols/src/grpctls/: .gitignore
src/tools/agent-tls-ctl/: Cargo.toml  README.md  config.json
src/tools/agent-tls-ctl/src/: client.rs  main.rs  utils.rs
src/tools/cmd-tls-ctl/: .gitignore  Cargo.toml  README.md
src/tools/cmd-tls-ctl/src/: container_cmd.rs  lib.rs
src/tools/cmd_tls_ctl/: .gitignore  Cargo.toml
src/tools/cmd_tls_ctl/src/: lib.rs  pause_cmd.rs
tools/osbuilder/rootfs-builder/: README.md  agent.toml  rootfs.sh  rootfs_attest.patch
