[package]
name = "protocols"
version = "0.1.0"
authors = ["The Kata Containers community <kata-dev@lists.katacontainers.io>"]
edition = "2018"
license = "Apache-2.0"

[features]
default = []
with-serde = [ "serde", "serde_json" ]
async = ["ttrpc/async", "async-trait"]
sealed-secret = []

[dependencies]
ttrpc = { version = "0.7.1" }
async-trait = { version = "0.1.42", optional = true }
protobuf = { version = "3.2.0" }
serde = { version = "1.0.130", features = ["derive"], optional = true }
serde_json = { version = "1.0.68", optional = true }
oci = { path = "../oci" }
#prost = { version = "0.10.4", features = ["std"]}
prost = { version = "0.10.4"}
#
#prost = { version = "0.11" }
tonic = { version = "0.7" }
# Added
#tonic = { version = "0.8.2" }

[build-dependencies]
ttrpc-codegen = "0.4.2"
protobuf = { version = "3.2.0" }
tonic-build = "0.7"
prost-build = "0.10.4"
